fix(search): remove double magnifying glass icon from the search input field on iOS

--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -69,11 +69,13 @@ input {
     transition: background-color 0.2s ease;
     border: 0;
     border-radius: 0.25rem;
-    padding: 0 0.5rem 0 2.25rem;
+    padding: 0 0.25rem 0 2.25rem;
     color: rgb(var(--kompendium-contrast-1200));
 
     height: 2rem;
     line-height: 2rem;
+
+    -webkit-appearance: textfield; // removes the default magnifying glass icon which is added by iOS, we already have an icon as a `background` shown below
 
     background: {
         color: rgb(var(--kompendium-contrast-300));
@@ -102,7 +104,7 @@ input {
         height: pxToRem(20);
         width: pxToRem(20);
         border-radius: 50%;
-        margin-right: pxToRem(-4);
+
         cursor: pointer;
         background: {
             color: rgb(var(--kompendium-contrast-800));
